Project/environments/overlays/staging/broadcaster_staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: broadcast-pod
$patch: strategic
spec:
  template:
    spec:
      containers:
        - name: broadcast-container
