Project/environments/overlays/staging/deployment_db_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
$patch: strategic
spec:
  template:
    spec:
      containers:
      - name: backend
