Project/environments/overlays/staging/service_db_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
$patch: strategic
spec:
  template:
    spec:
      containers:
      - name: backend-container
